--- a/MultiServer/Source/zMultiServer.vcxproj
+++ b/MultiServer/Source/zMultiServer.vcxproj
@@ -131,7 +131,7 @@
       <WarningLevel>Level3</WarningLevel>
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <ExpandAttributedSource>false</ExpandAttributedSource>
-      <ShowIncludes>true</ShowIncludes>
+      <ShowIncludes>false</ShowIncludes>
       <AdditionalOptions>/WL %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <ResourceCompile>
@@ -162,6 +162,7 @@
   <ItemGroup>
     <ClCompile Include="ExDataServer.cpp" />
     <ClCompile Include="eXWindow.cpp" />
+    <ClCompile Include="MiniDump.cpp" />
     <ClCompile Include="Server.cpp">
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <PreprocessorDefinitions Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">%(PreprocessorDefinitions)</PreprocessorDefinitions>
@@ -248,6 +249,7 @@
   <ItemGroup>
     <ClInclude Include="ExDataServer.h" />
     <ClInclude Include="eXWindow.h" />
+    <ClInclude Include="MiniDump.h" />
     <ClInclude Include="Server.h" />
     <ClInclude Include="giocp.h" />
     <ClInclude Include="WzQueue.h" />
