--- a/MultiServer/Source/zMultiServer.vcxproj.filters
+++ b/MultiServer/Source/zMultiServer.vcxproj.filters
@@ -141,6 +141,7 @@
     <ClCompile Include="Window.cpp">
       <Filter>Window\WindowOld</Filter>
     </ClCompile>
+    <ClCompile Include="MiniDump.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Server.h">
@@ -214,6 +215,9 @@
     </ClInclude>
     <ClInclude Include="Window.h">
       <Filter>Window\WindowOld</Filter>
+    </ClInclude>
+    <ClInclude Include="MiniDump.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
