--- a/GameServer/GameServer/GameServer.vcxproj
+++ b/GameServer/GameServer/GameServer.vcxproj
@@ -383,6 +383,7 @@
     <LibraryPath>$(SolutionDir)Lua\lib;$(LibraryPath)</LibraryPath>
     <IncludePath>$(SolutionDir)Lua\include;$(SolutionDir)..\_Lib\LuaSol2\include;$(IncludePath)</IncludePath>
     <EnableManagedIncrementalBuild>true</EnableManagedIncrementalBuild>
+    <TargetName>$(ProjectName)CS</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='S5E4|Win32'">
     <OutDir>.\GameServer___Win32_JPN\</OutDir>
