--- a/GameServer/GameServer/GameServer.vcxproj
+++ b/GameServer/GameServer/GameServer.vcxproj
@@ -718,7 +718,7 @@
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <WarningLevel>TurnOffAllWarnings</WarningLevel>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
-      <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;INTERNATIONAL_JAPAN;_DISABLE_LICENSE;%(PreprocessorDefinitions);S6E3</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;DEBUG;_WINDOWS;INTERNATIONAL_JAPAN;_DISABLE_LICENSE;%(PreprocessorDefinitions);S6E3</PreprocessorDefinitions>
       <AssemblerOutput>AssemblyCode</AssemblerOutput>
       <AssemblerListingLocation>$(IntDir)</AssemblerListingLocation>
       <BrowseInformation>false</BrowseInformation>
@@ -1451,6 +1451,7 @@
     <ClCompile Include="Brotherhood.cpp" />
     <ClCompile Include="BufferSystem.cpp" />
     <ClCompile Include="CalculatorManager.cpp" />
+    <ClCompile Include="DungeonConqueror.cpp" />
     <ClCompile Include="ChaosCastleRewardItem.cpp" />
     <ClCompile Include="ChaosMixManager.cpp" />
     <ClCompile Include="ChatFilter.cpp" />
@@ -1852,6 +1853,7 @@
     <ClInclude Include="CannonTower.h" />
     <ClInclude Include="CashItemPeriodSystem.h" />
     <ClInclude Include="CashLotterySystem.h" />
+    <ClInclude Include="DungeonConqueror.h" />
     <ClInclude Include="ChaosCastleRewardItem.h" />
     <ClInclude Include="ChaosMixManager.h" />
     <ClInclude Include="ChatFilter.h" />
