--- a/MultiServer/Source/zMultiServer.vcxproj
+++ b/MultiServer/Source/zMultiServer.vcxproj
@@ -98,6 +98,7 @@
       <DataExecutionPrevention>
       </DataExecutionPrevention>
       <TargetMachine>MachineX86</TargetMachine>
+      <ImageHasSafeExceptionHandlers>false</ImageHasSafeExceptionHandlers>
     </Link>
     <Bscmake>
       <SuppressStartupBanner>true</SuppressStartupBanner>
