--- a/GameServer/GameServer/GameServer.vcxproj.filters
+++ b/GameServer/GameServer/GameServer.vcxproj.filters
@@ -2786,6 +2786,9 @@
     <ClInclude Include="CustomBossDrop.h">
       <Filter>LCCustom</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\Common\Packets.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="ReadMe.txt" />
